--- a/share/man/man7/release.7
+++ b/share/man/man7/release.7
@@ -30,7 +30,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man7/release.7,v 1.3.2.6 2003/04/12 20:42:30 murray Exp $
 .\"
-.Dd November 1, 2019
+.Dd March 3, 2020
 .Dt NRELEASE 7
 .Os
 .Sh NAME
@@ -171,7 +171,7 @@ The name of the
 .Xr disklabel64 5
 slice in the IMG file and is used to identify the installation USB device.
 The is also the volume ID of the ISO file.
-.It Va MAKE_JOBS
+.It Va NREL_MAKE_JOBS
 The number of make jobs (default is the value of sysctl
 .Va hw.ncpu ) .
 .It Va PKG_ Ns Aq Ar port
